--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     //Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //Test
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
