--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,12 @@ dependencies {
     //Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //Test
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // Coil
+    implementation "io.coil-kt:coil:2.2.2"
 }
