--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BottomNavigationActivity">
         <activity
+            android:name=".AddEditCardActivity"
+            android:exported="false"
+            android:label="@string/title_activity_add_edit_card"
+            android:theme="@style/Theme.BottomNavigationActivity.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
@@ -23,11 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AddEditNoteActivity"
-            android:exported="true"/>
-
+            android:exported="true"
+            android:label="@string/title_activity_add_edit_card"
+            android:theme="@style/Theme.BottomNavigationActivity.NoActionBar" />
     </application>
 
 </manifest>
